--- a/server/.env.example
+++ b/server/.env.example
@@ -20,6 +20,7 @@ EMAIL_USER=
 EMAIL_PASS=
 EMAIL_FROM=
 
-# API Keys (for future AI integrations)
+# API Keys (for AI integrations)
+GEMINI_API_KEY=your_gemini_api_key_here
 OPENAI_API_KEY=
 CLAUDE_API_KEY=
