--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.3.0",
     "framer-motion": "10.12.16",
     "lucide-react": "^0.284.0",
     "react": "^18.2.0",
