--- a/server/.env.example
+++ b/server/.env.example
@@ -1,26 +1,17 @@
-# Environment
+# Server Configuration
+PORT=3000
 NODE_ENV=development
 
-# Server Configuration
-PORT=8080
-CLIENT_URL=http://localhost:5173
+# Cloudinary Configuration (Sign up at https://cloudinary.com/)
+CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_API_KEY=your_api_key_here
+CLOUDINARY_API_SECRET=your_api_secret_here
 
-# JWT Secret
-JWT_SECRET=your_jwt_secret_key_here
-JWT_EXPIRES_IN=7d
-
-# File Upload
-MAX_FILE_SIZE=10485760
-ALLOWED_FILE_TYPES=pdf,doc,docx,txt
-
-# Email Configuration (for future use)
-EMAIL_HOST=
-EMAIL_PORT=587
-EMAIL_USER=
-EMAIL_PASS=
-EMAIL_FROM=
-
-# API Keys (for AI integrations)
+# Gemini AI Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
-OPENAI_API_KEY=
-CLAUDE_API_KEY=
+
+# Database Configuration (if using MongoDB or other databases)
+# MONGODB_URI=mongodb://localhost:27017/lexiguard
+
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
