--- a/client/vercel.json
+++ b/client/vercel.json
@@ -11,14 +11,14 @@
     }
   ],
   "env": {
-    "VITE_API_BASE_URL": "https://lexiguard-server.vercel.app/api",
+    "VITE_API_BASE_URL": "https://lexi-gaurd.vercel.app/api",
     "VITE_APP_NAME": "LexiGuard",
     "VITE_ENVIRONMENT": "production",
     "VITE_ENABLE_ANALYTICS": "false"
   },
   "build": {
     "env": {
-      "VITE_API_BASE_URL": "https://lexiguard-server.vercel.app/api"
+      "VITE_API_BASE_URL": "https://lexi-gaurd.vercel.app/api"
     }
   },
   "headers": [
